--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "conjure"
 version = "0.1.0"
 authors = ["Benjamin Brittain <ben@brittain.org>"]
+license = "AGPL-3.0"
 edition = "2021"
 resolver = "2"
 
