--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ log = "0.4"
 wgpu = "0.11"
 futures = {version = "*", features = ["executor"]}
 bytemuck = { version = "1.4", features = [ "derive" ] }
+regex = "1.5"
