--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,13 @@ resolver = "2"
 
 [dependencies]
 argh = "0.1"
-rand = "0.8"
 nalgebra = "0.29"
 thiserror = "1"
-image = "0.23"
 winit = "0.26"
 cgmath = "0.18"
 env_logger = "0.9"
 log = "0.4"
 wgpu = "0.11"
-futures = {version = "*", features = ["executor"]}
+futures = {version = "0.3", features = ["executor"]}
 bytemuck = { version = "1.4", features = [ "derive" ] }
 regex = "1.5"
