--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ wgpu = "0.11"
 futures = {version = "0.3", features = ["executor"]}
 bytemuck = { version = "1.4", features = [ "derive" ] }
 regex = "1.5"
+notify = "4.0.16"
