Splits into a binary/lib style build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,11 @@ futures = {version = "0.3", features = ["executor"]}
 bytemuck = { version = "1.4", features = [ "derive" ] }
 regex = "1.5"
 notify = "4.0.16"
+
+[lib]
+name = "conjure"
+path = "src/lib.rs"
+
+[[bin]]
+name = "conjure-bin"
+path = "src/main.rs"
