--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bytemuck = { version = "1.4", features = [ "derive" ] }
 regex = "1.5"
 notify = "4.0.16"
 parking_lot = "0.11"
+rayon = "1.5"
 
 [lib]
 name = "conjure"
@@ -34,6 +35,7 @@ name = "sphere"
 
 [profile.release]
 debug = true
+panic = "abort"
 
 [dev-dependencies]
 pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
